feat: add docker host to extra_hosts in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -172,6 +172,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts: 
+    - "host.docker.internal:host-gateway"
 
   airflow-triggerer:
     <<: *airflow-common
