--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ soda-core
 soda-core-postgres
 apache-airflow-providers-http
 apache-airflow-providers-airbyte==3.8.0
+apache-airflow-providers-mongo
